--- a/styles/style.css
+++ b/styles/style.css
@@ -16,13 +16,31 @@ body {
   overflow: hidden;
 }
 
-.container {
-  border: 1px solid black;
-  margin: 10px;
+header {
+  background-color: black;
+  color: white;
+  margin: 0;
   padding: 10px;
+  /* position: fixed; */
+  text-align: center;
+  /* top: 0; */
+  width: 100%;
 }
 
-.addresses {
+.container {
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.container h1 {
+  text-align: center;
+}
+
+.address {
   border: 1px solid black;
   margin: 10px;
   padding: 20px;
@@ -30,6 +48,7 @@ body {
 
 input[type="button"] {
   background-color: darkblue;
+  border-radius: 5px;
   border: none;
   color: white;
   margin: 5px;
