--- a/styles/style.css
+++ b/styles/style.css
@@ -20,30 +20,56 @@ header {
   background-color: black;
   color: white;
   margin: 0;
-  padding: 10px;
-  /* position: fixed; */
+  padding: 5px;
+  position: fixed;
   text-align: center;
-  /* top: 0; */
+  top: 0;
   width: 100%;
 }
 
+header h1 {
+  font-size: 3em;
+}
+
 .container {
-  border: 1px solid black;
   border-radius: 5px;
-  margin: 10px;
-  padding: 10px;
+  border: 1px solid black;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.03), 0 6px 6px rgba(0, 0, 0, 0.03);
   display: flex;
   flex-direction: column;
+  /* margin: 10px 100px 10px 100px; */
+  padding: 10px;
+  width: 50%;
 }
 
 .container h1 {
   text-align: center;
 }
 
+.family {
+  background-color: blue;
+  color: white;
+  font-size: 12px;
+  padding: 5px;
+}
+
+.friend {
+  background-color: green;
+  color: white;
+  font-size: 12px;
+  padding: 5px;
+}
+
+.work {
+  background-color: yellow;
+  font-size: 12px;
+  padding: 5px;
+}
+
 .address {
   border: 1px solid black;
-  margin: 10px;
-  padding: 20px;
+  margin: 5px;
+  padding: 10px;
 }
 
 input[type="button"] {
@@ -62,4 +88,15 @@ input[type="button"]:hover {
 
 input[type="button"]:active {
   transform: scale(0.9);
+}
+
+footer {
+  background-color: black;
+  bottom: 0;
+  color: white;
+  margin: 0;
+  padding: 10px;
+  position: fixed;
+  text-align: center;
+  width: 100%;
 }
