--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 .table {
-  padding: 20px;
-  margin: 10px;
+  padding: 25px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+#logo-container {
+  white-space: nowrap;
 }
