Beginning search bar and login modal

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@
 #logo-container {
   white-space: nowrap;
 }
+
+.truncate {
+  max-width: 150px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
