--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .table {
-  padding: 25px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  padding: 2.5rem;
+  /* margin-top: 40px; */
+  /* margin-bottom: 40px; */
 }
 
 #logo-container {
