--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .table {
   padding: 2.5rem;
   /* margin-top: 40px; */
-  /* margin-bottom: 40px; */
+  margin-bottom: 40px;
+}
+
+.mainContent {
+  padding: 2.5rem;
 }
 
 #logo-container {
